# SpeedKiwi

./: .gitignore  LICENSE  README.md  lasharnTest.txt  lasharnTest.txt~
catkin_ws/: install.sh  run.sh  run1.sh
catkin_ws/ROS_GUI/: .project
catkin_ws/ROS_GUI/src/ROS_SE306/: CreateXMLFileJava.java  MainFrame.java  Panel.java  SystemStartup.java  XmlWrite.java
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: test.pc
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/liveDemo/: CMakeLists.txt  mylaunch.launch  package.xml
catkin_ws/src/liveDemo/msg/: my_msg.msg  my_msg.msg~
catkin_ws/src/liveDemo/src/: mypub.cpp  mysub.cpp
catkin_ws/src/py_demo/: CMakeLists.txt  mylaunch.launch  package.xml  setup.py
catkin_ws/src/py_demo/src/: mylib.cpp  mylib.h  mypub.py
catkin_ws/src/py_demo/world/: myworld.world
catkin_ws/src/speedkiwi_core/: CMakeLists.txt  mylaunch.launch  package.xml  setup.py
catkin_ws/src/speedkiwi_core/launch/: DefaultLaunch.launch  GeneratedLaunch.launch  TestLaunch.launch  mylaunch.launch  mylaunch.launch~
catkin_ws/src/speedkiwi_core/msg/: bin_status.msg  robot_status.msg
catkin_ws/src/speedkiwi_core/src/: Action.py  Animal.py  DifferentRobot.py  MoveAction.py  NavigateAction.py  Person.py  PickerRobot.py  Robot.py  RotateAction.py  action.py  animal.py  bin.py  different_robot.py  educated_person.py  figure_8_action.py  main.py  move_action.py  move_random_action.py  move_to_random_point_action.py  mover.py  navigate_action.py  person.py  person_controller.py  picker_robot.py  robot.py  robot_storage.py  rotate_action.py  test.py  test.py~  test_move_action.py  test_robot.py
catkin_ws/src/speedkiwi_core/test/: AlphaTestLaunch.launch  test_robot.py
catkin_ws/src/speedkiwi_core/world/: Arch.inc  DefaultWorld.world  GeneratedWorld.world  MattsRobot.inc  PergolaArch.inc  PergolaArchPositions.inc  PergolaBrace.inc  (+8 more)
catkin_ws/src/speedkiwi_debug_service/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/speedkiwi_msgs/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/speedkiwi_test/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/speedkiwi_test/launch/: TestLaunch.launch
catkin_ws/src/speedkiwi_test/src/: test_animal.py  test_bin.py  test_carrier.py  test_educated_person.py  test_move_action.py  test_navigate_action.py  test_person.py  test_picker.py  test_robot.py  test_robot_storage.py  test_status.py  test_tractor.py
catkin_ws/src/test/: CMakeLists.txt
catkin_ws/src/test/src/tutorial/: R0.py  R1.py
docs/user_manual/: user_manual.tex
(+71 files in other folders)
